Navigation menu added, functionality to be added

--- a/app/src/main/res/layout/activity_commentsection.xml
+++ b/app/src/main/res/layout/activity_commentsection.xml
@@ -17,7 +17,7 @@
         android:tint="@android:color/white"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        fab:fab_icon="@drawable/comment"
+        fab:fab_icon="@drawable/ic_comment"
         app:fabSize="mini" />
 
     <android.support.design.widget.TextInputLayout
