--- a/app/src/main/res/layout/eventvalue.xml
+++ b/app/src/main/res/layout/eventvalue.xml
@@ -4,10 +4,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="20dp"
     android:padding="20dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/event_constraint"
+    android:visibility="gone">
 
     <TextView
         android:id="@+id/host"
