--- a/app/src/main/res/layout/comments.xml
+++ b/app/src/main/res/layout/comments.xml
@@ -7,6 +7,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:id="@+id/comment_user"
+        android:hint="name"
         android:textStyle="normal|bold" />
 
     <TextView
@@ -14,6 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/comment_user"
         android:layout_alignParentEnd="true"
+        android:hint="time"
         android:id="@+id/comment_time" />
 
     <TextView
@@ -23,6 +25,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="5dp"
         android:id="@+id/comment_text"
+        android:hint="text"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="18sp" />
 </RelativeLayout>
