--- a/app/src/main/res/layout/posts.xml
+++ b/app/src/main/res/layout/posts.xml
@@ -10,6 +10,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:id="@+id/post_user"
+        android:hint="userName"
         android:textStyle="normal|bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -17,8 +18,9 @@
     <TextView
         android:id="@+id/post_time"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="17dp"
         android:layout_marginEnd="8dp"
+        android:hint="time"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -28,17 +30,27 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="5dp"
         android:id="@+id/post_text"
+        android:hint="TEXT"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/post_user" />
+
+    <ImageView
+        android:id="@+id/post_Image"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/post_text" />
     <Button
         android:id="@+id/post_like"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Like"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/post_text" />
+        app:layout_constraintTop_toBottomOf="@+id/post_Image" />
     <TextView
         android:id="@+id/post_nolike"
         android:layout_width="wrap_content"
@@ -48,13 +60,14 @@
         android:text="0"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/post_like"
-        app:layout_constraintTop_toBottomOf="@+id/post_text" />
+        app:layout_constraintTop_toBottomOf="@+id/post_Image" />
 
     <Button
         android:id="@+id/post_comment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:text="Comment"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/post_text" />
+        app:layout_constraintTop_toBottomOf="@+id/post_Image" />
 </android.support.constraint.ConstraintLayout>
